--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "glob-escape",
   "description": "Escape glob patterns",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": {
     "name": "Sven Schönung <sven.schoenung@gmail.com> (http://sven.schoenung.org/)"
   },
@@ -29,6 +29,20 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha test.js -x test.js --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "codacy": "istanbul cover ./node_modules/mocha/bin/_mocha test.js -x test.js --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage && rm -rf ./coverage"
   },
-  "keywords": [],
+  "keywords": [
+    "backslash",
+    "escape",
+    "glob",
+    "globbing",
+    "globs",
+    "gulpfriendly",
+    "match",
+    "matcher",
+    "minimatch",
+    "pattern",
+    "patterns",
+    "wildcard",
+    "wildcards"
+  ],
   "license": "MIT"
 }
