--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "glob-escape",
   "description": "Escape glob patterns",
   "version": "0.0.2",
+  "types": "index.d.ts",
   "author": {
     "name": "Sven Schönung <sven.schoenung@gmail.com> (http://sven.schoenung.org/)"
   },
